--- a/code/style.css
+++ b/code/style.css
@@ -35,32 +35,119 @@ body {
 }
 
 
+h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 40px;
+  font-weight: bold;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.big-text p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.small-text p{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 25px;
+  font-weight: bold;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
 .grid-parent {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(16, 100px);
-  border: 3px dotted blue;
+  grid-template-rows: repeat(9, 200px);
   gap: 30px;
 }
 
 .grid-item {
-  background: pink;
-  border: 2px solid blue;
+  background: rgb(245, 219, 170);
   grid-column: span 4;
-  grid-row: span 2;
 }
 
 .big-grid-item {
-  grid-row: span 4;
+  grid-row: span 3;
+  background-color: #fffff0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 5px;
 }
 
-.big-grid-item img {
+.big-image {
   grid-column: span 2;
-  max-height: 100%;
-  max-width: 50%;
-  object-fit: cover; 
+  height: 100%;
+  background-image: url(./busystreet1.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
-.big-grid-item h1, p {
-  grid-column: 3 / 5;
+.big-text {
+  grid-column: span 2;
+}
+
+.small-grid-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+}
+
+.small-image1 {
+  height: 100%;
+  background-image: url(./sunflowers.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-image2 {
+  height: 100%;
+  background-image: url(./manreading.jpg);
+  background-size: cover;
+  background-position: left;
+}
+
+.small-image3 {
+  height: 100%;
+  background-image: url(./work.jpg);
+  background-size: cover;
+  background-position: right;
+}
+
+.small-image4 {
+  height: 100%;
+  background-image: url(./hands.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-image5 {
+  height: 100%;
+  background-image: url(./newspapers.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-image6 {
+  height: 100%;
+  background-image: url(./youth.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-text {
+  padding: 5px;
+  margin: auto;
 }
