--- a/code/style.css
+++ b/code/style.css
@@ -10,8 +10,7 @@ html {
 }
 
 header {
-  margin: 15px 0px 5px 0px;
-  border: solid 2px;
+  border-bottom: solid 2px;
 }
 
 .nav-bar {
@@ -23,6 +22,7 @@ header {
   height: 60px;
   margin-bottom: 15px;
   align-items: center;
+  
 }
 
 .logo {
@@ -35,12 +35,41 @@ header {
 }
 
 h1 {
-  color: palevioletred;
-  font-family: georgia;
+  color: black;
+  font-family: didot;
   font-size: 28px;
   font-style: italic;
   grid-column: 2 / 6;
+}
 
+h2 {
+  font-family: georgia;
+  font-style: italic;
+  font-size: 36pt;
+  text-align: left;
+  border-left: solid 2px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  margin: 20px;
+}
+
+h3 {
+  background-color: yellow;
+  padding: 10px 15px 5px 15px;
+  font-size: x-large;
+  font-family: georgia;
+  color: black;
+  font-style: italic;
+  text-align: left;
+  margin: 0 auto;
+}
+
+h4 {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 18px;
+  padding: 20px 20px 10px 20px;
+  text-align: left;
 }
 
 .nav {
@@ -50,7 +79,7 @@ h1 {
 
 .nav-item {
   color: black;
-  font-family: helvetica;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-style: oblique;
   text-decoration: none;
   padding: 10px;
@@ -74,30 +103,28 @@ a:hover {
 }
 
 .big-news-textbox {
-  grid-column: 5 / 9;
-  grid-row: 1 / 3;
   background: pink;
   border-radius: 2%;
 }
 
+p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 0px 15px 0px 15px;
+  text-align: justify;
+}
+
 .big-news-paragraph {
-  font-family: Arial, Helvetica, sans-serif; 
-  font-size: medium;
-  font-style: italic;
+  /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  */
+  font-size: small;
   padding: 20px;
 }
 
-h2 {
-font-family: georgia;
-font-style: italic;
-font-size: 36pt;
-padding: 15px;
-text-align: left;
-}
-
-p {
-  padding: 0px 15px 0px 15px;
-  text-align: justify;
+.line-1 {
+  height: 2px;
+  background: black;
+  object-fit: fill;
+  margin: 0px 20px 20px 20px;
 }
 
 .news-grid { 
@@ -120,17 +147,6 @@ p {
   border-radius: 2%;
 }
 
-h3 {
-  background-color: yellow;
-  padding: 10px 15px 5px 15px;
-  font-size: x-large;
-  font-family: georgia;
-  color: black;
-  font-style: italic;
-  text-align: left;
-  margin: 0 auto;
-}
-
 h2:hover, h3:hover {
   text-decoration: underline;
 }
@@ -143,4 +159,104 @@ h2:hover, h3:hover {
 .small-news-text {
   font-size: small;
   padding: 0px 15px 10px 15px;
+}
+
+
+@media (max-width: 666px) {
+
+  .nav-bar {
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 60px;
+}
+
+  .nav {
+  display: none;
+} 
+
+h2 {
+  font-size: 26pt;
+}
+
+h3 {
+  font-size:large;
+}
+
+.big-news-box {
+  margin: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  /*gap: 10px;*/
+}
+
+.big-image {
+  max-width: 100%;
+  height: auto;
+  width: auto\9; /* ie8 */
+  margin: 0px;
+  border-bottom-left-radius: 0%;
+  border-bottom-right-radius: 0%;
+}
+
+.big-news-textbox {
+  max-width: 100%;
+  height: auto;
+  border-top-left-radius: 0%;
+  border-top-right-radius: 0%;
+}
+
+.big-news-paragraph {
+  padding-top: 0px;
+  padding-bottom: 5px;
+}
+
+.news-grid { 
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+}
+
+.small-news {
+  grid-column: 1fr;
+  height: auto;
+  width: auto;
+}
+
+.small-image {
+  max-width: 100%;
+  height: auto;
+  padding: 10px;
+}
+
+}
+
+
+@media (min-width: 667px) (max-width: 1024px) {
+  .nav-bar {
+  grid-template-columns: repeat(2, 1fr);
+  /*grid-template-columns: 85px 3fr 2fr;*/
+  grid-template-rows: 60px;
+  }
+ 
+  .big-news-box {
+  }
+  
+  .big-image {
+  }
+  
+  .big-news-textbox {
+    width: auto;
+    height: 600px;
+  }
+  
+  .big-news-paragraph {
+  }
+  
+  .news-grid { 
+    grid-template-columns: 4fr;
+    grid-template-rows: 1fr;
+  }
+  
+  .small-news {
+    grid-column: span 4fr;
+  }
+
 }
