--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,7 @@
 }
 
 
-/* Main CSS attributes*/
+/* General formatting*/
 
 
 body{
@@ -15,17 +15,17 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
+p{
+  margin: 0px;
+  font-size: 12px;
+  padding: 8px;
+}
+
 h1{
   font-family: 'Rozha One', serif;
   font-size: 55px;
   color: rgb(255, 255, 255);
   margin: 0;
-}
-
-p{
-  margin: 0px;
-  font-size: 12px;
-  padding: 8px;
 }
 
 h2{
@@ -46,10 +46,6 @@ a{
   color: white;
 }
 
-ul{
-  list-style-type: none;
-}
-
 hr {
   display: block;
   margin: auto;
@@ -61,10 +57,10 @@ hr {
 /* Grid overall layout */
 
 .container{
-  max-width: 1200px;
+  max-width: 80%;
   height: 100vh;
   background-color: rgb(255, 255, 255);
-  margin: 30px 100px;
+  margin: 30px 120px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 0.2fr 1.2fr 1.8fr 0.2fr;
@@ -153,8 +149,11 @@ font-size: 20px;
 
 .main-article {
   margin: auto;
-  display: inline-block;
-  justify-content: flex-start;
+  padding: var(--main-padding);
+}
+
+.main-article p{
+  column-count: 2;
 }
 
 .img-main-article {
@@ -311,6 +310,11 @@ h1{
   margin-bottom: 5px;
 }
 
+
+.main-article p{
+  column-count: 1;
+}
+
 .minor-article {
   margin: 15px;
 }
@@ -376,6 +380,11 @@ p{
   aspect-ratio: 1 / 1;
   object-fit: cover;
   margin-bottom: 5px;
+}
+
+
+.main-article p{
+  column-count: 1;
 }
 
 .minor-article {
