--- a/code/forlater.css
+++ b/code/forlater.css
@@ -1,3 +1,124 @@
+Code for the grid v1 mobile::after
+
+.big-text p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.small-text p{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 25px;
+  font-weight: bold;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
+.grid-parent {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(9, 200px);
+  gap: 30px;
+}
+
+.grid-item {
+  background: rgb(245, 219, 170);
+  grid-column: span 4;
+}
+
+.big-grid-item {
+  grid-row: span 3;
+  background-color: #fffff0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 5px;
+}
+
+.big-image {
+  grid-column: span 2;
+  height: 100%;
+  background-image: url(./busystreet1.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.big-text {
+  grid-column: span 2;
+}
+
+.small-grid-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 5px;
+}
+
+.small-image1 {
+  height: 100%;
+  background-image: url(./sunflowers.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-image2 {
+  height: 100%;
+  background-image: url(./manreading.jpg);
+  background-size: cover;
+  background-position: left;
+}
+
+.small-image3 {
+  height: 100%;
+  background-image: url(./work.jpg);
+  background-size: cover;
+  background-position: right;
+}
+
+.small-image4 {
+  height: 100%;
+  background-image: url(./hands.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-image5 {
+  height: 100%;
+  background-image: url(./newspapers.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-image6 {
+  height: 100%;
+  background-image: url(./youth.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.small-text {
+  padding: 5px;
+  margin: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 code for the styling of the navbar
 
