--- a/code/style.css
+++ b/code/style.css
@@ -60,7 +60,7 @@ hr {
   max-width: 80%;
   height: 100vh;
   background-color: rgb(255, 255, 255);
-  margin: 30px 120px;
+  margin: 10px auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 0.2fr 1.2fr 1.8fr 0.2fr;
@@ -286,7 +286,8 @@ grid-template-rows: repeat(4, 1fr);
 }
 
 .container {
-  margin: 15px 90px;
+  max-width: 80%;
+  margin: 10px auto;
   }
 
   
@@ -339,7 +340,8 @@ h1{
 }
 
 .container {
-  margin: 5px 20px;
+  max-width: 90%;
+  margin: 10px auto;
   }
 
   .container main {
