--- a/code/style.css
+++ b/code/style.css
@@ -5,37 +5,69 @@ html {
 
 .title-page {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px
+  padding: 1rem;
+  grid-template-columns: 1fr 3fr 1fr;
+  gap: 2rem;
+}
+
+.title , .logo-container , .navigation {
+  background-color: whitesmoke;
+}
+
+.title {
+  font-size: 25px;
 }
 
 .logo-container {
-  width: 250px;
-  height: 5px;
-  grid-column-start: 2;
-  grid-column-end: 3;
+  height: 25px;
+  width: 25px;
+  padding: 15px;
+  border: 10px;
+  margin: 0;
+  justify-self: center;
 }
 
 .navigation {
-  grid-column: 8/9;
+   font-size: 25px;
 }
 
 .big-news {
   display: flex;
   height: 500px;
-  justify-content: flex-end;
+  justify-content: center;
   align-content: center;
   flex-direction: column;
+  border: 2px solid;
+  margin-bottom: 2rem;
 }
 
 .main-story {
-  width: 300px;
-  height: 300px;
-  align-items: center;
-  align-content: center
+  width: 100px;
+  height: 100px;
+  justify-content: center;
+  align-content: center;
+}
+
+.h2 {
+justify-content: center;
+align-content: center;
 }
 
 .main-story-text {
   flex-direction: column;
   
+}
+
+.small-news {
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid;
+  padding: 2rem;
+  gap: 2rem;
+  justify-content: center;
+
+}
+
+.articles {
+  font-size: 15px;
 }
