--- a/code/style.css
+++ b/code/style.css
@@ -4,19 +4,18 @@ html {
 }
 
 body {
-  background: #ffffff;
-  width: 100%;
+  background: wheat;
+  margin: auto;
 }
 
 
 .flex-parent-header {
   background: #fffff0;
   height: 170px;
-  width: 98%;
-  padding: 10px;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -29,53 +28,98 @@ body {
   margin: 10px 10px 10px 15px;
 }
 
-.icon-mobile {
+
+.navbar {
+  display: none;
   align-content: center;
-} 
-
-.icon-mobile img {
-  height: 20px;
-  margin: 20px 20px 20px 10px;
+  border: 5px solid blue;
+  margin-right: 40px;
 }
-
-
-h1 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 40px;
+  
+.navbar a {
+  display: inline-block;
+  background: pink;
+  height: 40px;
+  width: 140px;
+  text-align: center;
+  padding: 10px;
+  margin: 15px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 30px;
   font-weight: bold;
-  padding-left: 5px;
-  padding-right: 5px;
+  color: tomato;
+  text-decoration: none;
+  box-shadow: 2px 4px tomato;
+}
+  
+.navbar a:hover {
+  background:tomato;
+  box-shadow: 2px 4px pink;
+  color: pink;
 }
 
 
 
 .news-grid {
+  margin-left: auto;
+  margin-right: auto;
   display: grid;
   grid-template-columns: 1fr;
   gap: 20px;
+  margin-bottom: 20px;;
 }
 
 .news-card {
-  border: 2px solid blue;
+  background-color: #fffff0;
 }
 
 .big-card {
-  height: 400px;
-  background-color: aquamarine;
-}
-
-.small-card {
- border: 2px, solid blue;
+  height: auto;
+  background-color: #fffff0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .big-card article {
   border: 1px #cccccc solid;
   margin: auto;
-  height: 400px;
+  height: auto;
 }
+
+.big-card img {
+  object-fit: cover;
+}
+
+h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 35px;
+  font-weight: bold;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 10px;
+  color: black;
+  margin: auto;
+}
+
+p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 18px;
+  padding: 6px 10px 0px 10px;
+  color: black;
+  text-align: justify;
+}
+
+
+.small-card {
+ border: 2px, solid blue;
+ background-color: wheat;
+}
+
 
 .small-card article {
   border: 1px #cccccc solid;
+  background-color: #fffff0;
   padding: 4px;
   margin: auto;
   width: 80%;
@@ -104,4 +148,30 @@ h3 {
 
 a {
   text-decoration: none;
+}
+
+footer {
+  background: #fffff0;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  text-decoration: none;
+  background-color: orange;
+  text-align: center;
+  color: white;
+  border: none;
+  box-shadow: 4px 4px pink;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+button:hover {
+  box-shadow: 4px 4px orange;
+  background-color: pink;
 }
