Responsive for desktop

--- a/code/style.css
+++ b/code/style.css
@@ -151,7 +151,7 @@ footer {
 @media (min-width: 668px) {
   body{
       flex-direction: row;
-      background: peru;
+      background: #fff;
       flex-wrap: wrap;
   }
   img {
@@ -197,7 +197,7 @@ footer {
 @media (min-width: 1025px) {
   body {
       flex-direction: row;
-      background: palevioletred;
+      background: #fff;
       max-width: 1280px;
       margin: 0 auto;
   }
