--- a/code/style.css
+++ b/code/style.css
@@ -72,7 +72,7 @@ hr {
   "content content content content";
 }
 
-/* Grid design of header and navbar */
+/* Grid design of header*/
 .container header {
   grid-column: 1/5;
   background-color: rgba(70, 100, 155, 0.753);
@@ -99,31 +99,97 @@ hr {
   aspect-ratio: 1 / 1;
 }
 
-/* Grid design of only navbar */
+/* Grid design of navbar */
 
 .container nav {
   grid-column: 1/5;
   background-color: rgba(70, 100, 155, 0.753);
   color: white;
-  padding: 15px;
-}
-
-.navbar1 {
+  padding: 15px 0px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;     /*Placerar längs vertikala axeln*/
-  align-items: center;                /*Centrerar längs horisontella axeln*/ 
-  margin: 0 70px;
+  justify-content: space-evenly;
 }
 
-.navbar1 a {
-font-size: 20px;
+/* Navbar drop down menu setup*/
+
+.top-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #0b4353;
+  color: #FFF;
+  height: 50px;
+  padding: 1em;
 }
 
-.navbar1 a:hover {
-  font-size: 20px;
-  opacity: 0.6;
-  }
+.menu {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin: 0 2rem;
+  overflow: hidden;
+  list-style-type: none;
+}
+
+.menu li:hover{
+  font-weight: bold;
+}
+
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+display: block;
+background-color: #fff;
+position: absolute;
+height: 4px;
+width: 30px;
+transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+border-radius: 2px;
+}
+
+.menu-button::before {
+content: '';
+margin-top: -8px;
+}
+
+.menu-button::after {
+content: '';
+margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+margin-top: 0px;
+transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+margin-top: 0px;
+transform: rotate(-405deg);
+}
 
 
 
@@ -161,10 +227,6 @@ font-size: 20px;
   max-width: 400px;
   aspect-ratio: 1 / 1;
   object-fit: cover;
-}
-
-.img-main-article:hover {
-  opacity: 0.7;
 }
 
 .button-readmore{
@@ -222,7 +284,6 @@ font-size: 20px;
 
 
 
-
 /* Grid design of the footer */
 .container footer {
   grid-column: 1/5;
@@ -259,7 +320,7 @@ font-size: 20px;
 }
 
 .container footer a:hover {
-  font-size: 14px;
+  font-weight: bold;
 }
 
 .img-arrow{
@@ -289,6 +350,12 @@ grid-template-rows: repeat(4, 1fr);
   max-width: 80%;
   margin: 10px auto;
   }
+
+ 
+     /* Navbar drop down menu*/
+.menu li {
+  margin: 0 1rem;
+}
 
   
 .container main {
@@ -320,10 +387,6 @@ h1{
   margin: 15px;
 }
 
-.navbar1 {
-  margin: 0 20px;
-}
-
   
 }
 
@@ -343,6 +406,61 @@ h1{
   max-width: 90%;
   margin: 10px auto;
   }
+
+
+
+/* Navbar drop down menu */
+
+.menu-button-container {
+  display: flex;
+}
+.menu {
+  position: absolute;
+  top: 0;
+  margin-top: 210px;
+  left: 35%;
+  flex-direction: column;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+}
+#menu-toggle ~ .menu li {
+  height: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+#menu-toggle:checked ~ .menu li {
+  border: 1px solid rgb(255, 255, 255);
+  height: 1.5em;
+  padding: 0.5em;
+  transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+.menu li {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  padding: 0.5em 0;
+  width: 100%; 
+  color: white;
+  background-color: rgb(116 138 180);
+}
+
+.menu li:hover{
+  font-weight: bold;
+}
+
+
+.menu li:not(:last-child) {
+  border-bottom: 1px solid #444;
+}
+
+.container nav {
+  padding: 25px 0px;
+}
+
+
 
   .container main {
       flex-direction: column;
