Change border width and logo magazine

--- a/code/style.css
+++ b/code/style.css
@@ -24,7 +24,7 @@
   margin: 0 auto;
   border-radius: 10px;
   box-shadow: var(--box-shadow);
-  width: 80%;
+  width: 70%;
   max-width: fit-content;
 }
 
@@ -232,7 +232,7 @@ p::first-letter {
 .logo-magazine {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin: 20px 0 20px 0;
 }
 
 /*https://codepen.io/zajonsss/pen/abqZZe, January 12, 2023*/
