--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 /*project-news-site*/
 :root {
-  --headings-font-family: "Xanh Mono", monospace;
+  --headings-font-family: "PT Sans Narrow", sans-serif;
   --logo-name-font-family: "Rubik Gemstones", cursive;
   --paragraph-font-family: "Newsreader", serif;
   --border-color: #94b1aa;
@@ -132,8 +132,8 @@ p::first-letter {
 .img-big-news-one,
 .img-big-news-two {
   display: flex;
-  height: 50%;
-  max-width: 50%;
+  height: 60%;
+  max-width: 80%;
 }
 
 .img-big-news-one {
