--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,7 @@
-html {
-    background:linear-gradient(to bottom right,#009999,#003366);
-    background-attachment:fixed;
-}
-
 body {
   margin: 0;
+  background:linear-gradient(to bottom right,#009999,#003366);
+  background-attachment:fixed;
 }
 
 /* Logo and navbar */
@@ -54,6 +51,7 @@ header h1 {
   justify-content: center;
   color: aliceblue;
   padding: 30px;
+  font-family: avenir;
 }
 
 .big-news img {
@@ -70,6 +68,7 @@ header h1 {
   background-color:aliceblue;
   color:#003366;
   font-weight: bold;
+  font-family: avenir;
 }
 
 .big-news button:hover {
@@ -84,6 +83,7 @@ color:aliceblue;
   gap: 20px;
   margin: 30px;
   color:aliceblue;
+  font-family: avenir;
 }
 
 .grid-parent img {
@@ -106,6 +106,7 @@ color:aliceblue;
   background-color:aliceblue;
   color:#003366;
   font-weight: bold;
+  font-family: avenir;
 }
 
 .grid-parent button:hover {
