--- a/code/style.css
+++ b/code/style.css
@@ -25,6 +25,7 @@ nav {
   position: absolute;
   cursor: pointer;
   top: 10px;
+  margin-right: 10px;
 }
 
 img {
@@ -42,7 +43,7 @@ color:rgb(125, 47, 202);
 text-decoration: none;
 }
 
-.nav_links {
+.nav-links {
   list-style: none;
 }
 
@@ -55,7 +56,7 @@ text-decoration: none;
   display: flex;
 }
 
-.nav_links li {
+.nav-links li {
   flex-direction: column;
   padding: 30px 20px;
   background-color: white;
@@ -63,11 +64,11 @@ text-decoration: none;
   cursor: pointer;
 }
 
-.nav_links li a {  
+.nav-links li a {  
   transition: all 0.3s ease 0s;
 }
 
-.nav_links li a:hover {
+.nav-links li a:hover {
   color: rgb(224, 14, 171);
 }
 
@@ -94,23 +95,24 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   border: 5px solid rgb(100, 132, 169);
+  padding: 10px 10px;
+  margin: 10px 10px;
 }
 
 .grid-item-big-card-img {
-  width: auto;
-  height: auto;
-  object-fit: cover;   
+  height: 100%;
+  width: 100%;
 }
 
 .grid-item-big-text {
   padding: 40px 40px;
 }
 
-.card__title {
+.card-title {
   font-family: verdana;
 }
 
-.card__description {
+.card-description {
   font-family: verdana;
 }
 
@@ -134,25 +136,42 @@ button:hover {
 .grid-parent-other-news {
   display: grid;
   background-color:#E8F3F5;
+  align-items: center;
+  gap: 20px;
+  margin: 10px 10px;
+
 }
 
 .grid-item-card {
   border: 5px solid rgb(100, 132, 169);
-  }
-  
+  box-shadow: 10px 10px 2px 1px rgba(0, 0, 255, .2);
+}
+
 .grid-item-card img {
   aspect-ratio: 1 / 1.2;
-  object-fit: cover;
 }
+
+.grid-item-card a {
+  margin-left: 2px;  
+}
+
+h4 { 
+ font-family: verdana;
+ object-fit: cover;
+ margin-top: 5px;
+ margin-left: 2px;
+ aspect-ratio: 1/0.15;
+}
+
 
 footer {
   display: flex;
   justify-content: center;
   font-size: verdana;
   text-align: center;
-  background-color: #a9bdc0;
+  background-color: rgba(0, 0, 255, .2);
   padding: 10px 0px;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .technigo-logo {
@@ -175,7 +194,7 @@ h1 {
   display: none;
 }
 
-  .nav_links li {
+  .nav-links li {
     display: inline-block;  
     padding: 30px 20px;
     background-color: #E8F3F5;
@@ -185,14 +204,13 @@ h1 {
     display: none;
   }
 
-  .nav_links li {
+  .nav-links li {
     background-color: none;
   }
 
   .grid-parent-big-news {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
       align-items: center;
       border: 5px solid rgb(100, 132, 169);
       overflow: hidden;
@@ -204,8 +222,9 @@ h1 {
     
 
   .grid-parent-other-news {
-      grid-template-columns: repeat(2, 1fr);
-  
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    overflow: hidden;
     }
   }
   
@@ -229,7 +248,7 @@ h1 {
     margin-right: auto;
   }
 
-  .nav_links li {
+  .nav-links li {
     display: inline-block;  
     padding: 30px 20px;
     background-color: #E8F3F5;
@@ -249,11 +268,7 @@ h1 {
   }
 
   .grid-parent-other-news {
-      grid-template-columns: repeat(4, 1fr);
-  
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
     }
-
-    }
-  
-    
-  
+}
