--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,8 @@
 /*project-news-site*/
 :root {
-  --headings-font-family: "PT Sans Narrow", sans-serif;
+  --navbar-font-family: "Newsreader", serif;
   --logo-name-font-family: "Rubik Gemstones", cursive;
+  --headings-font-family: "Rye", cursive;
   --paragraph-font-family: "Newsreader", serif;
   --border-color: #94b1aa;
   --primary-bg-color: #94b1aa;
@@ -35,7 +36,7 @@
 .navbar a {
   color: var(--primary-text-color);
   text-decoration: none;
-  font-family: var(--headings-font-family);
+  font-family: var(--navbar-font-family);
   margin-left: 5px;
   margin-right: 5px;
 }
@@ -89,7 +90,8 @@ h1 {
 }
 
 h2 {
-  font-family: var(--paragraph-font-family);
+  font-family: var(--headings-font-family);
+  font-weight: lighter;
 }
 
 p {
@@ -129,6 +131,10 @@ p::first-letter {
   margin: 30px 0 20px 70px;
 }
 
+.img-big-news-div {
+  text-align: center;
+}
+
 .img-big-news-one,
 .img-big-news-two {
   display: flex;
@@ -145,9 +151,9 @@ p::first-letter {
   border-top-left-radius: 20%;
 }
 
-.img-big-news-one figcaption {
+/*.img-big-news-one figcaption {
   text-align: center;
-}
+}*/
 
 .primary-link {
   border-radius: 4px;
@@ -168,6 +174,15 @@ p::first-letter {
   background: var(--secondary-bg-color);
   color: var(--secondary-text-color);
   border: 1px solid var(--border-color);
+}
+
+.fa-instagram {
+  display: flex;
+  font-size: 38px;
+  justify-content: left;
+  padding-left: 25px;
+  filter: drop-shadow(2px 4px 1px rgb(0 0 0 / 0.3));
+  background-clip: text;
 }
 
 .fa-linkedin {
