--- a/code/style.css
+++ b/code/style.css
@@ -114,14 +114,10 @@ p::first-letter {
 
 .grid-parent {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /*grid-template-rows: repeat(4, 100px);*/
+  grid-template-columns: repeat(3, 2fr);
+  grid-template-rows: repeat(7, 100px);
   gap: 10px;
 }
-
-/*.medium-grid-item {
-  grid-column: span 1;
-}*/
 
 /*.big-news {
   margin-left: 20px;
@@ -132,22 +128,21 @@ p::first-letter {
 }
 
 .img-big-news-div {
-  text-align: center;
+  text-align: left;
 }
 
 .img-big-news-one,
 .img-big-news-two {
   display: flex;
   height: 60%;
-  max-width: 80%;
+  max-width: 100%;
 }
 
-.img-big-news-one {
-  margin: 70px 0 70px 70px;
-}
+/*.img-big-news-one {
+  margin: 160px 0 0 70px;
+}*/
 
 .img-big-news-two {
-  margin: 70px 0 70px 0;
   border-top-left-radius: 20%;
 }
 
