made media queries to adjust header for desktop, the big-story section for desktop and made small size adjustments to news cards and fonts in general. Switched the logos as well, so the large one is always in the header and the small one now lives in the footer.

--- a/code/forlater.css
+++ b/code/forlater.css
@@ -149,3 +149,21 @@ code for the styling of the navbar
     box-shadow: 2px 4px pink;
     color: pink;
   }
+
+
+
+
+
+
+  @media (min-width: 1400px) {
+
+    .flex-parent-header {
+      height: 250;
+      }
+      
+    .logo img {
+      
+      height: 200px;
+    }
+    
+    }
