--- a/code/style.css
+++ b/code/style.css
@@ -27,36 +27,33 @@ body {
   height: 130px;
 }
 
-.logolarge {
-  display: none;
-}
 
 .navbar {
   display: none;
   align-content: center;
-  margin: 15px;
+  margin: 10px;
 }
   
 .navbar a {
   display: inline-block;
-  background: pink;
-  height: 28px;
-  width: 85px;
+  background: tomato;
+  height: 25px;
+  width: 80px;
   text-align: center;
   padding: 10px;
   margin: 15px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 20px;
   font-weight: bold;
-  color: tomato;
+  color: white;
   text-decoration: none;
-  box-shadow: 2px 4px tomato;
+  box-shadow: 4px 6px pink;
+  border-radius: 5px;
 }
   
 .navbar a:hover {
-  background:tomato;
-  box-shadow: 2px 4px pink;
-  color: pink;
+  background:pink;
+  box-shadow: 4px 6px tomato;
 }
 
 
@@ -80,11 +77,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  padding: 5px;
 }
 
 .big-card article {
-  border: 1px #cccccc solid;
   margin: auto;
   height: auto;
 }
@@ -97,8 +92,8 @@ h2 {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 35px;
   font-weight: bold;
-  padding-left: 6px;
-  padding-right: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 10px;
   color: black;
   margin: auto;
@@ -107,14 +102,13 @@ h2 {
 p {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 18px;
-  padding: 6px 10px 0px 10px;
+  padding: 6px 15px 0px 15px;
   color: black;
   text-align: justify;
 }
 
 
 .small-card {
- border: 2px, solid blue;
  background-color: wheat;
  grid-column: span 8;
 }
@@ -131,7 +125,7 @@ p {
 }
 
 .small-card article:hover {
-  box-shadow: 9px 9px lightsalmon
+  box-shadow: 9px 9px white
 }
 
 .small-card img {
@@ -155,11 +149,19 @@ a {
 
 footer {
   background: #fffff0;
-  height: 100px;
+  height: 150px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+footer img {
+  height: 120px;
+}
+
+footer img:hover {
+  height: 130px;
 }
 
 button {
@@ -171,7 +173,9 @@ button {
   box-shadow: 4px 4px pink;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 22px;
+  padding: 2px;
+  border-radius: 5px;
 }
 
 button:hover {
@@ -189,22 +193,73 @@ button:hover {
   grid-column: span 4;
 }
 
-}
-
-@media (min-width: 1024px) {
- .logolarge {
+.logolarge {
   display: inline-block;
  }
 
- .logosmall {
-  display: none;
- }
-  
- .small-card {
-  grid-column: span 2;
+}
+
+
+@media (min-width: 1024px) {
+
+ .flex-parent-header {
+  height: 600px;
  }
 
- h3 {
-  font-size: 23px;
+ .logo img {
+  height: 500px;
  }
+
+ .navbar a {
+    height: 90px;
+    width: 350px;
+    font-size: 70px;
+ }
+
+
+.news-grid {
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+h2 {
+  padding: 40px 90px 20px 90px;
+  font-size: 280px;
+}
+
+p {
+ font-size: 100px;
+ padding-left: 100px;
+ padding-right: 100px;
+}
+
+.big-card {
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+ .small-card {
+  grid-column: span 2;
+  margin-bottom: 40px;
+ }
+
+ .small-card article {
+  width: 85%;
+  height: 900px;
+  padding-left: 20px;
+}
+
+ h3 {
+  font-size: 55px;
+ }
+
+footer {
+  height: 320px;
+  margin-top: 100px;
+}
+
+footer img {
+  height: 250px;
+}
+
 }
